Item283: Deleting/Correcting FoswikiSite in source for all translations because topic does not exist any longer, see also following checkin on Item248. Finishing  es.po.
git-svn-id: http://svn.foswiki.org/trunk@1576 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/bg.po
+++ b/core/locale/bg.po
@@ -2881,7 +2881,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "За да модифицирате страници на този TWikiSite, е необходимо да се "
