--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -2964,8 +2964,9 @@ msgstr ""
 "kode:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
+#, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "For at kunne editere siderne på dette FoswikiSite, skal du have et "
