--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -2910,8 +2910,9 @@ msgstr ""
 "følgende:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
+#, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "For å redigere siden på denne Foswiki webløsningen trenger du å ha "
