--- a/core/locale/Foswiki.pot
+++ b/core/locale/Foswiki.pot
@@ -2705,7 +2705,7 @@ msgstr ""
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 
