--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -2995,8 +2995,9 @@ msgstr ""
 "folgende Auszeichnung:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
+#, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "Um Seiten auf dieser FoswikiSite zu bearbeiten benötigen Sie einen "
