--- a/core/locale/it.po
+++ b/core/locale/it.po
@@ -2977,7 +2977,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "Per editare le pagine di questo [[TwikiSite][sito Twiki]] devi essere un "
