--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -2916,7 +2916,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "このTwikiSiteページを編集するには、ユーザー名とパスワードを登録しなければなり"
