--- a/core/locale/ru.po
+++ b/core/locale/ru.po
@@ -3045,7 +3045,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "Чтобы редактировать страницы этого [[TWikiSite][сайта TWiki]], Вы должны "
