--- a/core/locale/sv.po
+++ b/core/locale/sv.po
@@ -2944,7 +2944,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "För att redigera sidorna på denna TWikiSite, krävs användarnamn och lösenord."
