--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -2987,7 +2987,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
 "Щоб редагувати сторінки цього [[TWikiSite][сайту TWiki]], Ви повинні бути "
