--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -2817,7 +2817,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr "为了编辑这个TWikiSite页面，您必须注册用户名和密码."
 
