--- a/core/locale/zh-tw.po
+++ b/core/locale/zh-tw.po
@@ -2818,7 +2818,7 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 #, fuzzy
 msgid ""
-"To edit pages on this FoswikiSite, you must have a registered user name and "
+"To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr "為了編輯這個TWikiSite頁面，您必須註冊用戶名和密碼."
 
