--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -3494,7 +3494,7 @@ msgstr ""
 
 #: core/lib/Foswiki/I18N.pm:313
 msgid "_language_name"
-msgstr "_språk_navn"
+msgstr "Norsk"
 
 #: core/lib/Foswiki/Access.pm:207
 msgid "access denied on root"
