Item283: Missed one to get to 100% for Danish
git-svn-id: http://svn.foswiki.org/trunk@1622 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -2964,12 +2964,11 @@ msgstr ""
 "kode:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
-#, fuzzy
 msgid ""
 "To edit pages on this Foswiki site, you must have a registered user name and "
 "password."
 msgstr ""
-"For at kunne editere siderne på dette FoswikiSite, skal du have et "
+"For at kunne editere siderne på dette Foswiki websted, skal du have et "
 "brugernavn og et password."
 
 #: core/templates/oopsleaseconflict.tmpl:20
