Item283: corrected error
git-svn-id: http://svn.foswiki.org/trunk@1654 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -2179,7 +2179,7 @@ msgstr ""
 
 #: PatternSkin/templates/edit.pattern.tmpl:30
 msgid "Read new revision help text in new window"
-msgstr "Les ny versjon hjelpetekst i nytt vindu""
+msgstr "Les ny versjon hjelpetekst i nytt vindu"
 
 #: TipsContrib/data/System/TipsOfTheDayInclude.txt:11
 msgid "Read on"
