Item618: Copyright symbol inside a Maketext requires the && instead of & as the single & means something else
git-svn-id: http://svn.foswiki.org/trunk@1688 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -1034,7 +1034,7 @@ msgstr ""
 #: core/data/System/WebPreferences.txt:34
 #, fuzzy
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Copyright &&copy; podle přispívajících autorů. Všechen materiál na této "
