--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -1033,7 +1033,7 @@ msgstr ""
 #: core/data/System/WebPreferences.txt:34
 #, fuzzy
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Авторські права &&copy; закріплені за авторами проекту. Всі матеріали по цій "
