--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -1026,7 +1026,7 @@ msgstr ""
 
 #: core/data/System/WebPreferences.txt:34
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Copyright &&copy; ved de deltagende brugere. Alt indhold i denne e-"
