--- a/core/locale/es.po
+++ b/core/locale/es.po
@@ -1029,7 +1029,7 @@ msgstr ""
 
 #: core/data/System/WebPreferences.txt:34
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Derechos reservados &&copy; por los autores contribuyentes. Todo el material "
