--- a/core/locale/fi.po
+++ b/core/locale/fi.po
@@ -947,7 +947,7 @@ msgstr ""
 
 #: core/data/System/WebPreferences.txt:34
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 
