--- a/core/locale/it.po
+++ b/core/locale/it.po
@@ -1038,9 +1038,8 @@ msgstr ""
 "piattaforma sono di proprietà dei rispettivi autori."
 
 #: core/data/System/WebPreferences.txt:34
-#, fuzzy
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Copyright &&copy; di chi contribuisce. Tutti i materiali presenti su questa "
