--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -1002,7 +1002,7 @@ msgstr ""
 
 #: core/data/System/WebPreferences.txt:34
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Copyright &&copy; av de bidragende forfattere. Alt materiale i denne "
