--- a/core/locale/pl.po
+++ b/core/locale/pl.po
@@ -1041,7 +1041,7 @@ msgstr ""
 #: core/data/System/WebPreferences.txt:34
 #, fuzzy
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Copyright &&copy;. Zawartość tej strony jest własnością osób "
