--- a/core/locale/ru.po
+++ b/core/locale/ru.po
@@ -1059,7 +1059,7 @@ msgstr ""
 #: core/data/System/WebPreferences.txt:34
 #, fuzzy
 msgid ""
-"Copyright &copy; by the contributing authors. All material on this site is "
+"Copyright &&copy; by the contributing authors. All material on this site is "
 "the property of the contributing authors."
 msgstr ""
 "Авторские права &&copy; закреплены за авторами проекта. Все материалы по "
