Item532:Updates for shortcuts, one more
git-svn-id: http://svn.foswiki.org/trunk@1712 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/no.po
+++ b/core/locale/no.po
@@ -170,7 +170,7 @@ msgstr "%1 forsøkte å registrere med epost %2"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:9
 msgid "&Cancel"
-msgstr "&Avbryt (&c)"
+msgstr "Avbryt (&c)"
 
 #: PatternSkin/data/Main/PatternSkinUserViewTemplate.txt:14
 msgid "&Edit text"
