Item645: adding Foswiki:Main.IsaacLin
git-svn-id: http://svn.foswiki.org/trunk@1720 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -1,6 +1,6 @@
 Foswiki is a development of the Foswiki community.
 
-Foswiki is based on TWiki (TM), which was written by Peter Thoeny, who
+Foswiki is based on TWiki<sup>&reg;</sup>, which was written by Peter Thoeny, who
 based his work on Jos Wiki and parts of Ward Cunningham's original Wiki.
 Over the years TWiki has been maintained, extended and rewritten
 by TWiki contributors, whos names are included below. TWiki is a trademark
@@ -19,6 +19,7 @@ The following people are identified as authors of Foswiki:
 | *Name*               | *Contact*                      | *Country*   |
 | Crawford Currie      | http://c-dot.co.uk             | UK          |
 | Gilmar Santos Jr     | Foswiki:Main.GilmarSantosJr    | Brazil      |
+| Isaac Lin            | Foswiki:Main.IsaacLin          | Canada      |
 | Kenneth Lavrsen      | http://www.lavrsen.dk          | Denmark     |
 | Sebastien Klus       |                                |             |
 | Sven Dowideit        | Foswiki:Main.SvenDowideit      | Australia   |
