Item645: updating Foswiki:Main.SebastianKlus
git-svn-id: http://svn.foswiki.org/trunk@1721 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -21,7 +21,7 @@ The following people are identified as authors of Foswiki:
 | Gilmar Santos Jr     | Foswiki:Main.GilmarSantosJr    | Brazil      |
 | Isaac Lin            | Foswiki:Main.IsaacLin          | Canada      |
 | Kenneth Lavrsen      | http://www.lavrsen.dk          | Denmark     |
-| Sebastien Klus       |                                |             |
+| Sebastien Klus       | Foswiki:Main.SebastianKlus     | Costa Rica  |
 | Sven Dowideit        | Foswiki:Main.SvenDowideit      | Australia   |
 | Will Norris          | Foswiki:Main.WillNorris        | Mexico      |
 
